; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_lneedupdate.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_lneedupdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctrl = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lneedupdate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lneedupdate(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ctrl*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call %struct.ctrl* @lua_touserdata(i32* %5, i32 1)
  store %struct.ctrl* %6, %struct.ctrl** %4, align 8
  %7 = load %struct.ctrl*, %struct.ctrl** %4, align 8
  %8 = getelementptr inbounds %struct.ctrl, %struct.ctrl* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.ctrl*, %struct.ctrl** %4, align 8
  %14 = getelementptr inbounds %struct.ctrl, %struct.ctrl* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @lua_pushlightuserdata(i32* %12, i64 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @lua_getuservalue(i32* %17, i32 1)
  store i32 2, i32* %2, align 4
  br label %20

19:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %11
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local %struct.ctrl* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @lua_pushlightuserdata(i32*, i64) #1

declare dso_local i32 @lua_getuservalue(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
